# tau-flatpak-platform

./: README.md  co.tauos.Sdk.json  com.fyralabs.Sdk.json  meson.build
.flatpak/: meson.sh
.github/workflows/: build.yml  nightly.yml  release.yml  upload.yml
data/: meson.build  platform.appdata.xml.in  sdk.appdata.xml.in
